Bug 18716 - [ICE] verify_flow_info failed (loop)
Summary: [ICE] verify_flow_info failed (loop)
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: tree-optimization (show other bugs)
Version: 4.0.0
: P2 normal
Target Milestone: 4.0.0
Assignee: Not yet assigned to anyone
URL:
Keywords: ice-on-valid-code, monitored
: 18734 (view as bug list)
Depends on:
Blocks:
 
Reported: 2004-11-29 14:00 UTC by Francois-Xavier Coudert
Modified: 2004-12-02 14:13 UTC (History)
4 users (show)

See Also:
Host: i686-gnu-linux
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2004-11-29 14:03:05


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Francois-Xavier Coudert 2004-11-29 14:00:59 UTC
The following simple fortran code:

-------------------------
subroutine test(n, v)
  implicit none
  integer :: n, i
  real(8) :: v(n)

  do i = 1, n
    v(i) = 0
  end do

  return
end
-------------------------

fails to compile with the following messages:
(using latest gfortran binaries, from 20041128 CVS)

~ $ gfortran -O1 -msse2 -ftree-vectorize -c foo.f90
foo.f90: In function ‘test’:
foo.f90:1: error: ‘then’ label does not match edge at end of bb 1
foo.f90:1: error: ‘else’ label does not match edge at end of bb 1
foo.f90:1: error: ‘then’ label does not match edge at end of bb 7
foo.f90:1: error: ‘else’ label does not match edge at end of bb 7
foo.f90:1: internal compiler error: verify_flow_info failed

However, it does compile fine if I remove one of -O1, -msse2 or -ftree-vectorize.
Comment 1 Andrew Pinski 2004-11-29 14:03:04 UTC
Here is an example which fails on ppc-darwin with altivec turned on:
subroutine test(n, v)
  implicit none
  integer :: n, i
  real(4) :: v(n)

  do i = 1, n
    v(i) = 0
  end do

  return
end
Comment 2 Andrew Pinski 2004-11-30 12:35:09 UTC
*** Bug 18734 has been marked as a duplicate of this bug. ***
Comment 3 Dorit Naishlos 2004-12-01 18:34:36 UTC
This patch should fix the problem:

Index: tree-vectorizer.c
===================================================================
RCS file: /cvs/gcc/gcc/gcc/tree-vectorizer.c,v
retrieving revision 2.42
diff -c -3 -p -r2.42 tree-vectorizer.c
*** tree-vectorizer.c   25 Nov 2004 22:31:09 -0000      2.42
--- tree-vectorizer.c   1 Dec 2004 18:30:50 -0000
*************** slpeel_make_loop_iterate_ntimes (struct
*** 665,670 ****
--- 665,672 ----
    tree exit_label = tree_block_label (loop->single_exit->dest);
    tree init = build_int_cst (TREE_TYPE (niters), 0);
    tree step = build_int_cst (TREE_TYPE (niters), 1);
+   tree then_label;
+   tree else_label;

    orig_cond = get_loop_exit_condition (loop);
    gcc_assert (orig_cond);
*************** slpeel_make_loop_iterate_ntimes (struct
*** 677,690 ****
    gcc_assert (bsi_stmt (loop_exit_bsi) == orig_cond);

    if (exit_edge->flags & EDGE_TRUE_VALUE) /* 'then' edge exits the loop.  */
!     cond = build2 (GE_EXPR, boolean_type_node, indx_after_incr, niters);
    else /* 'then' edge loops back.  */
!     cond = build2 (LT_EXPR, boolean_type_node, indx_after_incr, niters);

-   begin_label = build1 (GOTO_EXPR, void_type_node, begin_label);
-   exit_label = build1 (GOTO_EXPR, void_type_node, exit_label);
    cond_stmt = build3 (COND_EXPR, TREE_TYPE (orig_cond), cond,
!                    begin_label, exit_label);
    bsi_insert_before (&loop_exit_bsi, cond_stmt, BSI_SAME_STMT);

    /* Remove old loop exit test:  */
--- 679,698 ----
    gcc_assert (bsi_stmt (loop_exit_bsi) == orig_cond);

    if (exit_edge->flags & EDGE_TRUE_VALUE) /* 'then' edge exits the loop.  */
!     {
!       cond = build2 (GE_EXPR, boolean_type_node, indx_after_incr, niters);
!       then_label = build1 (GOTO_EXPR, void_type_node, exit_label);
!       else_label = build1 (GOTO_EXPR, void_type_node, begin_label);
!     }
    else /* 'then' edge loops back.  */
!     {
!       cond = build2 (LT_EXPR, boolean_type_node, indx_after_incr, niters);
!       then_label = build1 (GOTO_EXPR, void_type_node, begin_label);
!       else_label = build1 (GOTO_EXPR, void_type_node, exit_label);
!     }

    cond_stmt = build3 (COND_EXPR, TREE_TYPE (orig_cond), cond,
!                    then_label, else_label);
    bsi_insert_before (&loop_exit_bsi, cond_stmt, BSI_SAME_STMT);

    /* Remove old loop exit test:  */

I'll submit a patch to mainline shortly.
Comment 4 Dorit Naishlos 2004-12-01 21:58:07 UTC
> I'll submit a patch to mainline shortly.


patch: http://gcc.gnu.org/ml/gcc-patches/2004-12/msg00077.html
Comment 5 GCC Commits 2004-12-02 14:01:04 UTC
Subject: Bug 18716

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	dorit@gcc.gnu.org	2004-12-02 14:00:42

Modified files:
	gcc            : ChangeLog tree-vectorizer.c 

Log message:
	PR tree-opt/18716
	* tree-vectorizer.c (slpeel_make_loop_iterate_ntimes): Properly set
	then and else labels.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ChangeLog.diff?cvsroot=gcc&r1=2.6678&r2=2.6679
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/tree-vectorizer.c.diff?cvsroot=gcc&r1=2.46&r2=2.47

Comment 6 Andrew Pinski 2004-12-02 14:13:17 UTC
Fixed.