re PR tree-optimization/18716 ([ICE] verify_flow_info failed (loop))

PR tree-opt/18716
        * tree-vectorizer.c (slpeel_make_loop_iterate_ntimes): Properly set
        then and else labels.

From-SVN: r91637